change title to Bug's

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>X-Bug Base</title>
+    <title>Bug's</title>
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -21,7 +21,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#home-menu" aria-controls="home-menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">XB</a>
+      <a class="navbar-brand" href="#">Bug's</a>
 
       <div class="collapse navbar-collapse" id="home-menu">
         <ul class="navbar-nav mr-auto">
