change styles name from *-myxb to *-bugs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
 
-    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse navbar-myxb">
+    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse navbar-bugs">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#home-menu" aria-controls="home-menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,27 +36,28 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron jumbotron-myxb">
+    <div class="jumbotron jumbotron-bugs">
       <div class="container">
         <h1>What's dangerous is not to evolve.</h1>
         <p>Jeff Bezos</p>
       </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
+    <div class="container favs-bugs">
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p class="lead"><a href="#">View details</a></p>
+          <h2>News</h2>
+          <p><a target="_blank" href="https://www.inside.com.tw/">INSIDE</a></p>
+          <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
+          <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
         </div>
         <div class="col-md-4">
           <h2>Heading</h2>
-          <p class="lead"><a href="#">View details</a></p>
+          <p><a target="_blank" href="#">View details</a></p>
        </div>
         <div class="col-md-4">
           <h2>Heading</h2>
-          <p class="lead"><a href="#">View details</a></p>
+          <p><a target="_blank" href="#">View details</a></p>
         </div>
       </div>
 
