--- a/index.html
+++ b/index.html
@@ -46,18 +46,61 @@
     <div class="container favs-bugs">
       <div class="row">
         <div class="col-md-4">
+          <h2>Life</h2>
+          <p><a target="_blank" href="http://www.google.com/">Google</a></p>
+          <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
+          <p><a target="_blank" href="http://www.facebook.com/">Facebook</a></p>
+          <p><a target="_blank" href="http://www.outlook.com/">Outlook</a></p>
+          <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
+          <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
+          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07723/a07/">奧斯卡影城</a></p>
+          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
+        </div>
+        <div class="col-md-4">
           <h2>News</h2>
           <p><a target="_blank" href="https://www.inside.com.tw/">INSIDE</a></p>
           <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
           <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
+          <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p><a target="_blank" href="#">View details</a></p>
-       </div>
+          <h2>Tech</h2>
+          <p><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
+          <p><a target="_blank" href="https://github.com/">GitHub</a></p>
+          <p><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></p>
+          <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
+          <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
+          <p><a target="_blank" href="http://www.google.com/design/">Google Design</a></p>
+          <p><a target="_blank" href="https://facebook.github.io/react-native/">React Native</a></p>
+          <p><a target="_blank" href="https://www.codecademy.com/">Codecademy</a></p>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p><a target="_blank" href="#">View details</a></p>
+          <h2>Business</h2>
+          <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
+          <p><a target="_blank" href="http://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
+          <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
+          <p><a target="_blank" href="http://www.ftchinese.com/channel/ce.html">FT中文網</a></p>
+          <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>English</h2>
+          <p><a target="_blank" href="http://www.gotoabc.url.tw/index.html">GotoABC</a></p>
+          <p><a target="_blank" href="http://www.ept-xp.com/">EPT美語</a></p>
+          <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
+          <p><a target="_blank" href="http://voicetube.tw/">VoiceTube</a></p>
+          <p><a target="_blank" href="http://learningenglish.voanews.com/">Voice of America</a></p>
+          <p><a target="_blank" href="http://www.netspeak.org/">Netspeak</a></p>
+          <p><a target="_blank" href="http://linggle.com/">Linggle 10^12</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Miscellaneous</h2>
+          <p><a target="_blank" href="http://dictionary.cambridge.org/zht/">劍橋詞典</a></p>
+          <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a></p>
+          <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
+          <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
         </div>
       </div>
 
