change firebase project from sio2lst to myyp for sio2lst

--- a/pcl/sio2lst.html
+++ b/pcl/sio2lst.html
@@ -34,6 +34,7 @@
                 <th>名稱</th>
                 <th>地址</th>
                 <th>電話</th>
+                <th>官網</th>
               </tr>
             </thead>
             <tbody>
@@ -51,16 +52,16 @@
     <!-- JavaScript -->
     <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
     <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyAMrIxj9kiKXycxpBJ61DCnyairOLXacnk",
-        authDomain: "sio2lst-dbbe6.firebaseapp.com",
-        databaseURL: "https://sio2lst-dbbe6.firebaseio.com",
-        storageBucket: "sio2lst-dbbe6.appspot.com",
-        messagingSenderId: "500094484071"
-      };
-      firebase.initializeApp(config);
-    </script>
+	  // Initialize Firebase
+	  var config = {
+	    apiKey: "AIzaSyBdAFCQoqsx3X9J6A5aHwVi1fOYKSj0WP8",
+	    authDomain: "myyp-a0b17.firebaseapp.com",
+	    databaseURL: "https://myyp-a0b17.firebaseio.com",
+	    storageBucket: "myyp-a0b17.appspot.com",
+	    messagingSenderId: "180991619785"
+	  };
+	  firebase.initializeApp(config);
+	</script>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
