change sio2lst to myyp

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/main.css">
 
   </head>
 
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="container favs-bugs">
+    <div class="container favs-item">
       <div class="row">
         <div class="col-md-4">
           <h2>Life</h2>
@@ -36,6 +36,7 @@
           <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07723/a07/">奧斯卡影城</a></p>
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
+          <p><a target="_blank" href="/myyp/">火基黃頁</a></p>
         </div>
         <div class="col-md-4">
           <h2>News</h2>
@@ -81,7 +82,6 @@
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
-          <p><a target="_blank" href="/pcl/sio2lst.html">sio2lst</a></p>
         </div>
       </div>
 
