--- a/myyp/index.html
+++ b/myyp/index.html
@@ -6,28 +6,28 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bug's sio2lst</title>
+    <title>Bug's YPs</title>
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/main.css">
 
   </head>
 
   <body>
 
-    <div class="jumbotron jumbotron-pcl">
+    <div class="jumbotron jumbotron-myyp">
       <div class="container">
-        <h1>sio2lst</h1>
+        <h1>My Yellow Pages</h1>
         <p>Bootstrap 4, Firebase</p>
       </div>
     </div>
 
-    <div class="container favs-bugs">
+    <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <table id="theList" class="table table-bordered table-hover table-sm table-sio2lst">
+          <table id="theList" class="table table-bordered table-hover table-sm table-myyp">
             <thead>
               <tr>
                 <th>編號</th>
@@ -66,7 +66,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="/js/scripts.js"></script>
-    <script src="/js/sio2lst.js"></script>
+    <script src="/js/myyp.js"></script>
   </body>
 </html>
