add class no-display

--- a/myyp/index.html
+++ b/myyp/index.html
@@ -30,7 +30,7 @@
             <!-- Button that handles sign-in/sign-out -->
             <button class="btn btn-primary" id="google-sign-in">Sign in with Google</button>
             <!-- Container where we'll display the user details -->
-            <div class="google-user-details-container">
+            <div class="google-user-details-container no-display">
               Firebase sign-in status: <span id="google-sign-in-status">Unknown</span>
               <div>Firebase auth <code>currentUser</code> object value:</div>
               <pre><code id="google-account-details">null</code></pre>
