add class .oauth-section

--- a/myyp/index.html
+++ b/myyp/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 oauth-section">
             <!-- Button that handles sign-in/sign-out -->
             <button class="btn btn-primary" id="google-sign-in">Sign in with Google</button>
             <!-- Container where we'll display the user details -->
