--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
           <h2>Tech</h2>
           <p><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
           <p><a target="_blank" href="https://github.com/">GitHub</a></p>
-          <p><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></p>
+          <p><a target="_blank" href="http://getbootstrap.com/">Bootstrap 3</a>, <a target="_blank" href="https://v4-alpha.getbootstrap.com/">v4-alpha</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
           <p><a target="_blank" href="http://www.google.com/design/">Google Design</a></p>
-          <p><a target="_blank" href="https://facebook.github.io/react-native/">React Native</a></p>
+          <p><a target="_blank" href="https://vuejs.org/">Vue.js</a></p>
           <p><a target="_blank" href="https://www.codecademy.com/">Codecademy</a></p>
         </div>
       </div>
