--- a/myyp/index.html
+++ b/myyp/index.html
@@ -40,23 +40,7 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-12">
-          <table id="theList" class="table table-bordered table-hover table-sm table-myyp">
-            <thead>
-              <tr>
-                <th>編號</th>
-                <th>名稱</th>
-                <th>地址</th>
-                <th>電話</th>
-                <th>官網</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-        </div>
-      </div>
+      <div id="theList" class="row card-myyp"> </div>
 
       <footer>
         <p>&nbsp;</p>
