add writing data function

--- a/myyp/index.html
+++ b/myyp/index.html
@@ -40,6 +40,16 @@
         </div>
       </div>
 
+      <hr>
+      <form class="form-inline">
+        <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sglid" placeholder="編號">
+        <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sglname" placeholder="名稱">
+        <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sgltel" placeholder="電話">
+        <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sgladdr" placeholder="地址">
+        <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sglweb" placeholder="網站">
+        <button type="submit" class="btn btn-sm btn-primary" id="write-data">Submit</button>
+      </form>
+      <hr>
       <div id="theList" class="row card-myyp"> </div>
 
       <footer>
