--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <p><a target="_blank" href="http://www.google.com/design/">Google Design</a></p>
           <p><a target="_blank" href="https://vuejs.org/">Vue.js</a></p>
           <p><a target="_blank" href="https://www.codecademy.com/">Codecademy</a></p>
+          <p><a target="_blank" href="http://www.quackit.com/">Quackit Tutorials</a></p>
         </div>
       </div>
 
