modify writing and removing data function

--- a/myyp/index.html
+++ b/myyp/index.html
@@ -47,8 +47,10 @@
         <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sgltel" placeholder="電話">
         <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sgladdr" placeholder="地址">
         <input type="text" class="form-control form-control-sm mb-2 mr-sm-2 mb-sm-0" id="sglweb" placeholder="網站">
-        <button type="submit" class="btn btn-sm btn-primary" id="write-data">Submit</button>
+        <button class="btn btn-sm btn-primary" id="write-data">Write</button>&nbsp;
+        <button class="btn btn-sm btn-danger" id="remove-data">Remove</button>
       </form>
+
       <hr>
       <div id="theList" class="row card-myyp"> </div>
 
