--- a/jybe/index.html
+++ b/jybe/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bug's YPs</title>
+    <title>JYBE Test</title>
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
