--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         </div>
         <div class="col-md-4">
           <h2>Miscellaneous</h2>
+          <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
           <p><a target="_blank" href="http://dictionary.cambridge.org/zht/">劍橋詞典</a></p>
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
