--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
           <p><a target="_blank" href="http://www.cw.com.tw/">天下雜誌</a></p>
           <p><a target="_blank" href="https://www.youtube.com/watch?v=CUKpfr9tWBc">東森財經 57 頻道</a></p>
+          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
         </div>
         <div class="col-md-4">
           <h2>Tech</h2>
