--- a/index.html
+++ b/index.html
@@ -19,25 +19,42 @@
 
     <div class="jumbotron jumbotron-home">
       <div class="container">
-        <h1 class="home-title">Bug's</h1>
+        <h1>Bug's</h1>
+        <p>Homepage</p>
       </div>
     </div>
 
-    <div class="text-center">
-        <img src="/images/my-moment.jpg" class="img-fluid profile-photo" alt="My moment">  
-    </div>    
+    <div class="container">
+      <div class="row fav-quotes">
+          <div class="col-md-6 text-center">
+            <img src="/images/my-moment.jpg" class="img-fluid profile-photo" alt="My moment">    
+          </div>
+          <div class="col-md-6">
+            <h2>My favorite quotes</h2>
+            <hr>
+            <h3>What's dangerous is not to evolve.</h3>
+            <p class="text-muted">Jeff Bezos</p>
+            <h3>Predicting rain doesn't count. Building arks does.</h3>
+            <p class="text-muted">Warren Buffett</p>
+          </div>
+      </div>   
+    </div> 
 
     <div class="home-detail">
-      <div class="container">
         <div class="row">
-          <div class="offset-md-4 col-md-4">
-            <h2>EachMobi Co-founder</h2>
-            <h2>PyOne Founder</h2>
-            <h2>NSYSU MBA</h2>
-            <h2>NKNU MCS</h2>            
+          <div class="my-tile col-md-6">
+            <img src="/images/logo-eachmobi.png" class="my-logo rounded-circle" alt="EachMobi Logo">    
+            <h2>EachMobi</h2>
+            <p>Co-founder</p>
+            <p>Chief Executive Officer</p>
+          </div>
+          <div class="my-tile col-md-6">
+            <img src="/images/logo-pyone.png" class="my-logo rounded-circle" alt="PyOne Logo">    
+            <h2>PyOne</h2>
+            <p>Founder</p>
+            <p>Director of Teaching &amp; Learning</p>
           </div>
         </div>
-      </div>
     </div>
   </body>
 </html>
