--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bug's bookmarks</title>
+    <title>Bug's Bookmarks</title>
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -17,10 +17,9 @@
 
   <body>
 
-    <div class="jumbotron jumbotron-bugs">
+    <div class="jumbotron jumbotron-main">
       <div class="container">
-        <h1>What's dangerous is not to evolve.</h1>
-        <p>Jeff Bezos</p>
+        <h1>Bug's Bookmarks</h1>
       </div>
     </div>
 
