--- a/firebase/index.html
+++ b/firebase/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bug's YPs</title>
+    <title>Bug's Firebase</title>
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -17,10 +17,9 @@
 
   <body>
 
-    <div class="jumbotron jumbotron-myyp">
+    <div class="jumbotron jumbotron-main">
       <div class="container">
-        <h1>My Yellow Pages</h1>
-        <p>Bootstrap 4, Firebase</p>
+        <h1>Bug's Firebase</h1>
       </div>
     </div>
 
@@ -52,7 +51,7 @@
       </form>
 
       <hr>
-      <div id="theList" class="row card-myyp"> </div>
+      <div id="theList" class="row card-firebase"> </div>
 
       <footer>
         <p>&nbsp;</p>
@@ -77,6 +76,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="/js/myyp.js"></script>
+    <script src="/js/myfb.js"></script>
   </body>
 </html>
