--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="jumbotron jumbotron-home">
       <div class="container">
-        <h1>Bug's</h1>
+        <h1>Bug</h1>
       </div>
     </div>
 
@@ -44,7 +44,7 @@
           <div class="my-tile col-md-6">
             <img src="/images/logo-eachmobi.png" class="my-logo rounded-circle" alt="EachMobi Logo">    
             <h2>EachMobi</h2>
-            <p>Co-founder</p>
+            <p>Co-Founder</p>
             <p>Chief Executive Officer</p>
           </div>
           <div class="my-tile col-md-6">
