correct two links

--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -44,7 +44,7 @@
           <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
           <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
           <p><a target="_blank" href="http://www.cw.com.tw/">天下雜誌</a></p>
-          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財, <a target="_blank" href="http://www.books.com.tw/products/0010713730">解答一生財務問題</a></a></p>
+          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a>, <a target="_blank" href="http://www.books.com.tw/products/0010713730">解答一生財務問題</a></p>
         </div>
         <div class="col-md-4">
           <h2>Tech</h2>
