--- a/hosptech/index.html
+++ b/hosptech/index.html
@@ -22,11 +22,12 @@
 
       <div class="collapse navbar-collapse" id="home-menu">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link" href="#">客務</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">房務</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">餐飲</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">宴會</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">安全</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Sales &amp; Marketing</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Security</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Front Office</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Housekeeping</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Food &amp; Beverage</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Banquet</a></li>
         </ul>
       </div>
     </nav>
@@ -39,12 +40,32 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-4">
+    <div id="self-intro">
+      <div class="container topic-outline">
+        <div class="row">
+          <ul class="none lead">
+            <li>Experience
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+            <li>Education
+              <ul>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+          </ul>
+        </div>  
       </div>
-      <div class="col-md-4">
-      </div>
-      <div class="col-md-4">
+    </div>
+
+    <div id="home" class="jumbotron jumbotron-section">
+      <div class="container text-center">
+        <h1>Sales &amp; Marketing</h1>
+        <p class="lead">Bug Chang</p>
       </div>
     </div>
 
