--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
   <body>
 
     <div class="jumbotron jumbotron-home">
-      <div class="container">
-        <h1>Bug</h1>
+      <div class="container text-center">
+        <h1><small class="text-muted">I am</small> Bug</h1>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row fav-quotes">
-          <div class="col-md-6 text-center">
+    <div class="container fav-quotes">
+      <div class="row">
+          <div class="col-md-4 text-center">
             <img src="/images/my-moment.jpg" class="img-fluid profile-photo" alt="My moment">    
           </div>
-          <div class="col-md-6">
-            <h2>My favorite quotes</h2>
+          <div class="col-md-8">
+            <h2>Favorite Quotes</h2>
             <hr>
             <h3>What's dangerous is not to evolve.</h3>
             <p class="text-muted">Jeff Bezos</p>
@@ -39,18 +39,30 @@
       </div>   
     </div> 
 
-    <div class="home-detail">
-        <div class="row">
-          <div class="my-tile col-md-6">
+    <div class="container home-detail">
+    	<div class="row">
+    		<div class="offset-md-4 col-md-8">
+    		<h2>Professions</h2>
+            <hr>
+    		</div>
+    	</div>
+        <div class="row text-center">
+          <div class="offset-md-4 col-md-2">
             <img src="/images/logo-eachmobi.png" class="my-logo rounded-circle" alt="EachMobi Logo">    
-            <h2>EachMobi</h2>
-            <p>Co-Founder</p>
+          </div>
+          <div class="col-md-6">
+            <h3>EachMobi</h3>
+            <p class="texti-founder">Co-Founder</p>
             <p>Chief Executive Officer</p>
           </div>
-          <div class="my-tile col-md-6">
+        </div>
+        <div class="row text-center">
+          <div class="offset-md-4 col-md-2">
             <img src="/images/logo-pyone.png" class="my-logo rounded-circle" alt="PyOne Logo">    
-            <h2>PyOne</h2>
-            <p>Founder</p>
+          </div>
+          <div class="col-md-6">
+            <h3>PyOne</h3>
+            <p class="texti-founder">Founder</p>
             <p>Director of Teaching &amp; Learning</p>
           </div>
         </div>
