--- a/hosptech/index.html
+++ b/hosptech/index.html
@@ -36,7 +36,7 @@
     <div id="home" class="jumbotron jumbotron-topic">
       <div class="container text-center">
         <h1>Hospitality Technology</h1>
-        <p class="lead">Bug Chang</p>
+        <p class="lead">餐旅科技</p>
       </div>
     </div>
 
@@ -44,14 +44,14 @@
       <div class="container topic-outline">
         <div class="row">
           <ul class="none lead">
-            <li>Experience
+            <li>Outlines
               <ul>
                 <li></li>
                 <li></li>
                 <li></li>
               </ul>
             </li>
-            <li>Education
+            <li>Outlines
               <ul>
                 <li></li>
                 <li></li>
@@ -65,14 +65,14 @@
     <div id="home" class="jumbotron jumbotron-section">
       <div class="container text-center">
         <h1>Sales &amp; Marketing</h1>
-        <p class="lead">Bug Chang</p>
+        <p class="lead">行銷業務</p>
       </div>
     </div>
 
     <hr class="footer-hr">
 
     <footer>
-      <p>Updated Date: 2017/04/29</p>
+      <p>Updated Date: 2017/05/24</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
