modify home and delete hosptech

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="jumbotron jumbotron-home">
       <div class="container text-center">
-        <h1><small class="text-muted">I am</small> Bug</h1>
+        <h1><small class="text-primary">I am</small> Bug</h1>
       </div>
     </div>
 
