add and delete links

--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -38,7 +38,6 @@
         </div>
         <div class="col-md-4">
           <h2>News</h2>
-          <p><a target="_blank" href="https://www.inside.com.tw/">INSIDE</a></p>
           <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
           <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
           <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
@@ -81,7 +80,7 @@
         <div class="col-md-4">
           <h2>Miscellaneous</h2>
           <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
-          <p><a target="_blank" href="http://dictionary.cambridge.org/zht/">劍橋詞典</a></p>
+          <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo奇摩字典</a></p>
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
