--- a/index.html
+++ b/index.html
@@ -3,69 +3,102 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bug's homepage">
-    <meta name="author" content="Bug">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <title>Bug's</title>
+    <title>Bug's Bookmarks</title>
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/home.css">
-    
+    <link rel="stylesheet" href="/css/main.css">
+
   </head>
 
   <body>
 
-    <div class="jumbotron jumbotron-home">
-      <div class="container text-center">
-        <h1><small class="text-primary">I am</small> Bug</h1>
+    <div class="jumbotron jumbotron-main">
+      <div class="container">
+        <h1>Bug's Bookmarks</h1>
       </div>
     </div>
 
-    <div class="container fav-quotes">
+    <div class="container favs-item">
       <div class="row">
-          <div class="col-md-4 text-center">
-            <img src="/images/my-moment.jpg" class="img-fluid profile-photo" alt="My moment">    
-          </div>
-          <div class="col-md-8">
-            <h2>Favorite Quotes</h2>
-            <hr>
-            <h3>What's dangerous is not to evolve.</h3>
-            <p class="text-muted">Jeff Bezos</p>
-            <h3>Predicting rain doesn't count. Building arks does.</h3>
-            <p class="text-muted">Warren Buffett</p>
-          </div>
-      </div>   
-    </div> 
+        <div class="col-md-4">
+          <h2>Life</h2>
+          <p><a target="_blank" href="http://www.google.com/">Google</a></p>
+          <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
+          <p><a target="_blank" href="http://www.facebook.com/">Facebook</a></p>
+          <p><a target="_blank" href="http://www.outlook.com/">Outlook</a></p>
+          <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
+          <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
+          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07723/a07/">奧斯卡影城</a></p>
+          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>News</h2>
+          <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
+          <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
+          <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
+          <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
+          <p><a target="_blank" href="http://www.cw.com.tw/">天下雜誌</a></p>
+          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a>, <a target="_blank" href="http://www.books.com.tw/products/0010713730">解答一生財務問題</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Tech</h2>
+          <p><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
+          <p><a target="_blank" href="https://github.com/">GitHub</a></p>
+          <p><a target="_blank" href="http://getbootstrap.com/">Bootstrap 3</a>, <a target="_blank" href="https://v4-alpha.getbootstrap.com/">v4-alpha</a></p>
+          <p><a target="_blank" href="https://vuejs.org/">Vue.js</a></p>
+          <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
+          <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
+          <p><a target="_blank" href="http://www.google.com/design/">Google Design</a></p>
+          <p><a target="_blank" href="https://www.codecademy.com/">Codecademy</a></p>
+        </div>
+      </div>
 
-    <div class="container home-detail">
-    	<div class="row">
-    		<div class="offset-md-4 col-md-8">
-    		<h2>Professions</h2>
-            <hr>
-    		</div>
-    	</div>
-        <div class="row text-center">
-          <div class="offset-md-4 col-md-2">
-            <img src="/images/logo-eachmobi.png" class="my-logo rounded-circle" alt="EachMobi Logo">    
-          </div>
-          <div class="col-md-6">
-            <h3>EachMobi</h3>
-            <p class="texti-founder">Co-Founder</p>
-            <p>Chief Executive Officer</p>
-          </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Business</h2>
+          <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
+          <p><a target="_blank" href="http://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
+          <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
+          <p><a target="_blank" href="http://www.ftchinese.com/channel/ce.html">FT中文網</a></p>
+          <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
         </div>
-        <div class="row text-center">
-          <div class="offset-md-4 col-md-2">
-            <img src="/images/logo-pyone.png" class="my-logo rounded-circle" alt="PyOne Logo">    
-          </div>
-          <div class="col-md-6">
-            <h3>PyOne</h3>
-            <p class="texti-founder">Founder</p>
-            <p>Director of Teaching &amp; Learning</p>
-          </div>
+        <div class="col-md-4">
+          <h2>English</h2>
+          <p><a target="_blank" href="http://www.gotoabc.url.tw/index.html">GotoABC</a></p>
+          <p><a target="_blank" href="http://www.bbc.co.uk/worldservice/learningenglish/general/">General &amp; Business English</a></p>
+          <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
+          <p><a target="_blank" href="http://voicetube.tw/">VoiceTube</a></p>
+          <p><a target="_blank" href="http://learningenglish.voanews.com/">Voice of America</a></p>
+          <p><a target="_blank" href="http://www.netspeak.org/">Netspeak</a></p>
+          <p><a target="_blank" href="http://linggle.com/">Linggle 10^12</a></p>
         </div>
+        <div class="col-md-4">
+          <h2>Miscellaneous</h2>
+          <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
+          <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo奇摩字典</a></p>
+          <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a></p>
+          <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
+          <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>&nbsp;</p>
+      </footer>
     </div>
+
+
+    <!-- JavaScript -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
