--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07723/a07/">奧斯卡影城</a></p>
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
+          <p><a target="_blank" href="/diners/">高雄餐廳</a></p>
         </div>
         <div class="col-md-4">
           <h2>News</h2>
