Modified index links.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
           <p><a target="_blank" href="http://www.facebook.com/">Facebook</a></p>
           <p><a target="_blank" href="http://www.outlook.com/">Outlook</a></p>
           <p><a target="_blank" href="https://www.linkedin.com/uas/login">LinkedIn</a></p>
-          <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
-          <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
-          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07723/a07/">奧斯卡影城</a></p>
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
           <p><a target="_blank" href="/diners/">高雄餐廳</a></p>
         </div>
@@ -46,17 +43,19 @@
           <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
           <p><a target="_blank" href="http://www.cw.com.tw/">天下雜誌</a></p>
           <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a>, <a target="_blank" href="http://www.books.com.tw/products/0010713730">解答一生財務問題</a></p>
+          <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
+          <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
         </div>
         <div class="col-md-4">
           <h2>Tech</h2>
           <p><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
           <p><a target="_blank" href="https://github.com/">GitHub</a></p>
+          <p><a target="_blank" href="https://www.heroku.com/">Heroku</a></p>
           <p><a target="_blank" href="http://getbootstrap.com/">Bootstrap 3</a>, <a target="_blank" href="https://v4-alpha.getbootstrap.com/">v4-alpha</a></p>
           <p><a target="_blank" href="https://vuejs.org/">Vue.js</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
           <p><a target="_blank" href="http://www.google.com/design/">Google Design</a></p>
-          <p><a target="_blank" href="https://www.codecademy.com/">Codecademy</a></p>
         </div>
       </div>
 
