Modified index links.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
           <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
           <p><a target="_blank" href="http://www.cw.com.tw/">天下雜誌</a></p>
-          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a>, <a target="_blank" href="http://www.books.com.tw/products/0010713730">解答一生財務問題</a></p>
+          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
           <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
           <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
         </div>
@@ -71,7 +71,6 @@
         <div class="col-md-4">
           <h2>English</h2>
           <p><a target="_blank" href="http://www.gotoabc.url.tw/index.html">GotoABC</a></p>
-          <p><a target="_blank" href="http://www.bbc.co.uk/worldservice/learningenglish/general/">General &amp; Business English</a></p>
           <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
           <p><a target="_blank" href="http://voicetube.tw/">VoiceTube</a></p>
           <p><a target="_blank" href="http://learningenglish.voanews.com/">Voice of America</a></p>
