--- a/diners/index.html
+++ b/diners/index.html
@@ -27,19 +27,19 @@
       <div class="row">
         <div class="col-md-4">
           <h2 class="text-success">洋城三多店</h2>
-          <p>地址：<a href="https://www.google.com.tw/maps/place/洋城+義大利餐廳-三多店/@22.6140489,120.3052373,20z/" target="_blank">806高雄市前鎮區三多三路227號</a></p>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/洋城+義大利餐廳-三多店/@22.6140489,120.3052373,18z/" target="_blank">806高雄市前鎮區三多三路227號</a></p>
           <p>電話：<a href="tel:073327078">073327078</a></p>
           <p>開放時間：11:00-22:00</p>
         </div>
         <div class="col-md-4">
           <h2 class="text-success">洋城五福店</h2>
-          <p>地址：<a href="https://www.google.com.tw/maps/place/洋城義大利餐廳-高雄大統店/@22.6235586,120.3017541,20z/" target="_blank">800高雄市新興區五福二路262號</a></p>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/洋城義大利餐廳-高雄大統店/@22.6235586,120.3017541,18z/" target="_blank">800高雄市新興區五福二路262號</a></p>
           <p>電話：<a href="tel:072161838">072161838</a></p>
           <p>開放時間：11:00-22:00</p>
         </div>
         <div class="col-md-4">
           <h2 class="text-success">麓琦咖啡道館</h2>
-          <p>地址：<a href="https://www.google.com.tw/maps/place/麓琦咖啡道館/@22.6245211,120.3160631,20z/" target="_blank">802高雄市苓雅區青年一路1-13號</a></p>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/麓琦咖啡道館/@22.6245211,120.3160631,18z/" target="_blank">802高雄市苓雅區青年一路1-13號</a></p>
           <p>電話：<a href="tel:077229357">077229357</a></p>
           <p>開放時間：11:00-21:30</p>
         </div>
@@ -48,9 +48,30 @@
       <div class="row">
         <div class="col-md-4">
           <h2 class="text-success">溫室造咖</h2>
-          <p>地址：<a href="https://www.google.com.tw/maps/place/溫室造咖/@22.63036,120.307407,20z/" target="_blank">800高雄市新興區仁愛一街102號</a></p>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/溫室造咖/@22.63036,120.307407,18z/" target="_blank">800高雄市新興區仁愛一街102號</a></p>
           <p>電話：<a href="tel:072828850">072828850</a></p>
           <p>開放時間：11:00-22:00</p>
+        </div>
+        <div class="col-md-4">
+          <h2 class="text-success">花小豬正宗韓式烤肉</h2>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/花小豬/@22.6210419,120.2977479,18z" target="_blank">801高雄市前金區光明街3號</a></p>
+          <p>電話：<a href="tel:072211221">072211221</a></p>
+          <p>開放時間：17:30-00:00</p>
+        </div>
+        <div class="col-md-4">
+          <h2 class="text-success">義來藝去Eagle餐廳</h2>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/義來藝去Eagle餐廳/@22.6580081,120.300277,17z" target="_blank">804高雄市鼓山區南屏路599號</a></p>
+          <p>電話：<a href="tel:075531351">075531351</a></p>
+          <p>開放時間：09:00-00:00</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <h2 class="text-success">寶石X飽食早午餐</h2>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/寶石X飽食早午餐/@22.6289772,120.3559712,18z" target="_blank">830高雄市鳳山區光復路189號</a></p>
+          <p>電話：<a href="tel:0989698880">0989698880</a></p>
+          <p>開放時間：08:45-16:00</p>
         </div>
       </div>
 
