Modified index menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"">
     <link rel="stylesheet" href="/css/main.css">
 
   </head>
@@ -51,7 +51,7 @@
           <p><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
           <p><a target="_blank" href="https://github.com/">GitHub</a></p>
           <p><a target="_blank" href="https://www.heroku.com/">Heroku</a></p>
-          <p><a target="_blank" href="http://getbootstrap.com/">Bootstrap 3</a>, <a target="_blank" href="https://v4-alpha.getbootstrap.com/">v4-alpha</a></p>
+          <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
           <p><a target="_blank" href="https://vuejs.org/">Vue.js</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
@@ -67,6 +67,7 @@
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
           <p><a target="_blank" href="http://www.ftchinese.com/channel/ce.html">FT中文網</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
+          <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
         </div>
         <div class="col-md-4">
           <h2>English</h2>
@@ -84,6 +85,9 @@
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
+          <p><a target="_blank" href="https://yeasy.gitbooks.io/blockchain_guide/content/">区块链技术指南</a></p>
+          <p><a target="_blank" href="http://dokelung-blog.logdown.com/">Python Fast Track</a></p>
+          <p><a target="_blank" href="https://openhome.cc/Gossip/Python/index.html">Python Gossip</a></p>
         </div>
       </div>
 
@@ -96,9 +100,10 @@
 
 
     <!-- JavaScript -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
