--- a/diners/index.html
+++ b/diners/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bug's Diners</title>
+    <title>Diners</title>
 
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -19,7 +19,7 @@
 
     <div class="jumbotron jumbotron-main">
       <div class="container">
-        <h1>Bug's Diners</h1>
+        <h1>Diners</h1>
       </div>
     </div>
 
@@ -47,16 +47,16 @@
 
       <div class="row">
         <div class="col-md-4">
+          <h2 class="text-success">勒芙輕食</h2>
+          <p>地址：<a href="https://www.google.com.tw/maps/place/勒芙輕食.古巴三明治/@22.622502,120.31682,18z" target="_blank">802高雄市苓雅區林泉街169號</a></p>
+          <p>電話：<a href="tel:077138282">077138282</a></p>
+          <p>開放時間：06:30-17:30</p>
+        </div>
+        <div class="col-md-4">
           <h2 class="text-success">溫室造咖</h2>
           <p>地址：<a href="https://www.google.com.tw/maps/place/溫室造咖/@22.63036,120.307407,18z/" target="_blank">800高雄市新興區仁愛一街102號</a></p>
           <p>電話：<a href="tel:072828850">072828850</a></p>
           <p>開放時間：11:00-22:00</p>
-        </div>
-        <div class="col-md-4">
-          <h2 class="text-success">花小豬正宗韓式烤肉</h2>
-          <p>地址：<a href="https://www.google.com.tw/maps/place/花小豬/@22.6210419,120.2977479,18z" target="_blank">801高雄市前金區光明街3號</a></p>
-          <p>電話：<a href="tel:072211221">072211221</a></p>
-          <p>開放時間：17:30-00:00</p>
         </div>
         <div class="col-md-4">
           <h2 class="text-success">義來藝去Eagle餐廳</h2>
