Add more links to index.html

--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
           <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
           <p><a target="_blank" href="http://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
-          <p><a target="_blank" href="http://www.ftchinese.com/channel/ce.html">FT中文網</a></p>
+          <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
+          <p><a target="_blank" href="https://www.managertoday.com.tw/">經理人月刊</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
         </div>
         <div class="col-md-4">
           <h2>English</h2>
           <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo奇摩字典</a></p>
+          <p><a target="_blank" href="http://www.kekenet.com/">可可英語</a></p>
           <p><a target="_blank" href="http://www.gotoabc.url.tw/index.html">GotoABC</a></p>
           <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
           <p><a target="_blank" href="http://voicetube.tw/">VoiceTube</a></p>
